--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,5 +6,8 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
 
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
 }
