--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,7 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  overflow-y: scroll
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
