tax rate table and tax create  form are created successfully and add functionality

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,11 +3,20 @@
 @tailwind utilities;
 
 
+
+
 body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  overflow-y: scroll
+  overflow-y: scroll;
+
+}
+
+body.modal-open {
+  overflow-y: hidden;
+  scrollbar-gutter: stable;
+  height: 100vh;
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
